<resources>
    <string name="app_name">SriSaiMN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Download Sri Sai Satcharitra</string>
    <string name="kakadlayout1">Joduniya kar charani thevila Matha

Parisawi vinanti majhi sagurunatha(pandharinatha)

Aso-naso bhav alo tujhiya thaya

Kripa drishti pahe majkade sadgururaya

Akhandit asawe aise watate payi

Sanduni sankoch thav thodasa dei

Tuka manhane deva maji vedi wakudi

Namhe – bhavapash hati apulya todi</string>
    <string name="kakadlayout2">Utha panduranga ata prabhat samayo patala

Vaishnawancha mela garud pari datala

Garud para pasuni mahadwara paryant

Suracharanchi mandi ubhi joduniya hath

Shuka sanakadik narad tumbar bhaktanchyakoti

Trishul damaroo ghewooni ubha girjecha pati

Kaliyugincha bhakta namhe ubha kirtani

Pathimage ubhi dola lawooniya jani</string>
    <string name="kakadlayout3">Utha utha sri sainath guru charan kamal dawa

Aadhi wyadi bhawatap waruni tara jadviwa

Geli tumha soduniya bhawatama rajani vilaya

Pri hi agyanasi tumachi bhulawi yogmaya

Shakti na amha Yatkinchitahi tijala saraya

Tumhich teetay saruni dawa mukha jan taraaya

Bho sainath maharaj bhawa timirnashak ravi

Agyani amhi kiti tawa varnavi thorawi

Tee warnita bhagale bahuvadani shesh vidhi kavi

Sakurpa howooni mahima tumcha tumhich wadwa wa

Utha Utha ------------------------(1)

Bhakt mani sadbhaw dharuni je tumha anusarale

Dhayastawa Te darshan tumche dwari ubhe thele

Dhyanastha tumhas pahuni man amuche dhale

Pari Twa chanamruta Prashayate atur jhale

Ughaduni netra kamaladeenabhandu ramakanta

Pahiba krupa drushti balaka jashi mata

Ranjavi madhurvani Hari tap Sai Natha

Aamhich Apule Kajastawa tuja kashtavito Deva

Sahan Karishil te aikuni ghyawi bhet Krishna Dhawa

Utha Utha Aadhi Wyadi ..(2)</string>
    <string name="kakadlayout4">Utha Panduranga ata darshan dya sakala

Jhala Arunodaya sarali nidrechi vela

Sant sadhu mani avaghe jhaleti gola

Sada Sheje sukh ata baghu dhya mukh kamala

Rang Mandapi maha dwari jhalise dati

Man utavil roop pahawaya drushti

Rahi rakhumabai tumha yewoodhya daya

Sheje halwooni jage kara devraya

Garud hanumant ubhe pahati waat

Swarginche surwar ghewooni ale bobhat

Jale mukta dwar labh jhala rokada

Vishnu das nama ubha ghewooni kankada</string>
    <string name="kakadlayout5">Ghewooniya pancharati karoo babansi arti karoo sai si..

Utha utha ho bandhav owalu ha ramadhav

Karuniya Sthira man, Pahu gambhir he dhyana

Saiche hey

Krishna natha datt sai jado chitt tujhepai

</string>
    <string name="kakadlayout6">Kakad arti karito sainath deva

Chinmaya roop dakhavi ghewooni balak laghu seva

Kam krodh mad matsar atwooni Kankada kela

Vairagyache toop ghalooni me to bhijavila

Sai nath guru bhakti jawaane to me petawila

Tad wruth jaluni guru ne parakash padila

Dwaita tama nasuni milavi tatswaroopi jeewa

Chinmaya roop dhakavi ghewooni balak laghu seva

Bhoo-kechar vyapuni avaghe hrudhkamali rahasi

Tochi datta devu shridi rahuni pawasi

Rahooni yethe anyatrahi too bakta stav dhavasi

Nirasuniya sankata dasa anubhav davisi

Chinmaya roop dakhavi...

Twadhyash dundu bhine sare ambar he kondale

Sagun murti pahanya atur jan shirdi ale

Prashuntwat vachanamrit amuche dehabhan harpale

Soduniya durabhiman manas twat charni wahile

Krupa karuniya sai maule dass padari ghyawa

Chinmaya...</string>
    <string name="kakadlayout7">Bhaktichiya poti bodh kankada jyothi

Panch pran jivebhave owaloo arti

Owaloo arti majya pandharinatha majya sainatha

Donhi Kara jodoni charani thevila matha

Kayb mahima varnu ata sangane kiti

Koti brahma hatya mukh pahata jati

Rai rukhumabai ubhaya doghi do bahi

Mayur pich chamare dhallti thaiche thai

Tuka mhane deep ghewooni unmaneet shobha

Vite vari ubha dise lawanya gabha .. Owaloo …</string>
    <string name="kakadlayout8">Utha sadhu sant sadha apulale heet

Jaeel jaeel ha nardeh mag kaicha bhagwant

Uthoniya pahate baba uba ase vite

Charan tayancha gomate amrut drishti awaloka

Utha utha ho vegsi chala jawooya rawoolasi

Jalatil patakanchya rashi kakad arti dekhiliya

Jage kara rukminivar, dev ahe nijsurant

Vege linlon kara drisht hoel tayasi

Dari wajantri vajati dhol damane garjati

Hote kakad ati majhya sadguru rayanchi

Sihanad shankh bheri anand hoto maha dwari

Keshavraj vetewari nama charan vandito

Sainath guru majhe aaee

Majla thav dhava payee

Datt raj guru majhe aaee

Majla thav dhava payee

Sri satchidanand sadguru

Sainath maharajki jai</string>
    <string name="kakadlayout9">Prabhat samayi shubh ravi prabha phankali

Samare guru sada asha samayi tya chhale na kali

Manhoni kar jodoni karu ata guru prarthana

Samarth guru sai nath purvi manovasana……………1

Tama nirsi bhanu ha guru hi nasi adnyanata

Parantu guruchi kari na ravihi kadhi samyata

Punha timir janma ghe gurukrupeni adnyana na

Samarth guru sainath puri manovasana………………2

Ravi pragat hawooni twarita ghalwi alasa

Tasa guruhi sodwi sakal dushkruti lalasa

Haroni abhimani jadwi tatpadi bhavana

Samarth guru sainath purvi manovasana……………...3

Gurusi upma dise vidheehari haranchi uni

Kuthoni mag yei tee kavani ya ugi pahooni

Tujjhich upma tula bharvi shobhate sajana

Samarth guru sainath purvi manovasana…………….4

Samadhi utroniya guru chala mashidikade

Twaidya vachnoti tee madhur variti sankade

Ajatripu sadguru akhil pataka bhajana

Samarth guru sainath purvi manovasana……………..5

Aha susamayasi ya guru uthoniya baisale

Vilokuni padashrit tadiy aapade nasile

Asa suhitkari ya jagati konihi anya na

Samarth guru sainath purvi manovasana……………..6

Ase bahut shahana pari na jya guruchi kripa

Na tatswahit tya kale karitase rikamya gapa

Jari gurupada dhari sadrudh bhaktine to mana

Samarth guru sainath purvi manovasana……………..7

Guro vinati mi kari hridaymandiriya basa

Samasta jag he guruswarupachi thaso manasa

Karo satat satkruti matihi de jagatpavana

Samarth guru sainath purvi manovasana……………..8

Premeya ashtakasi padhuni guruvara prarthiti je prabhati,

Tyachi chittasee deto akhil

Haruniya bhranti mee nitya shanti

Aise he sainathekathuni

Suchvile jevi ya baalakasi,

Tevi tya krisnapayi namuni

Savinaye arpito ashtakasi………………………………9

</string>
    <string name="kakadlayout10">Sai raham najar karna,

Bachoon ka palan karna

Jana tumne jagat pasara,

Sabahi jooth jamana

Sai raham najar karna

Mai andha hoon banda apaka

Mujase prabhu dikhlana

Sai ram najar karna

Das ganu kahe aab kya bolu,

Thak gayi meri rasana

Sai ram najar karna

</string>
    <string name="kakadlayout11">Raham najar karo, ab more sai

Tumbin nahi mujhe maa baap bhai - Raham ….

Mai andha hoo banda tumara - Mai andha ….

Mai na janoo allah elahi-Raham najar Karo

Khali jamana maineh gamaya - Khali ….

Sathi akhar ka kiya na koi-Raham najar Karo

Apne mashidka jhadoo ganu hai - Apne ….

Malik hamara, tum baba sai - Raham najar Karo

</string>
    <string name="kakadlayout12">Tuj kay deoon sawlya mee khaya tari

Mi dubali batik namyachee jaa shree hari

Uchhishta tula dene hi goshta na bari

Tu jagannath, tuj deoon kashire bhakari

Nako anta madiya pahoon sakhiya bhagwanta - shrikanta

Madhyanharatr Ultoni galee hi aata - aan chitta.

Hoiel tujhare kankada ki raulantari

Aantil bhakti naivedyahi nanapari -</string>
    <string name="kakadlayout13">Sri sadguru baba sai

Tujwanchuni ashray nahi, bhutali

Mi papi patit dheemananda - Mi….

Tarne mala gurunatha, jhadakari

Tu shantishamecha meru, Tu….

Tu bhavarnavinche taru guruvara,

Guruvara majasi pamara, ata udddhvara

Twarit lavlahi, Twarit lavlahi,

Mi budto bhavbhay dohi, uddhvara Sri sadguru….</string>
    <string name="dhooplayout1">Arati Sai Baba. Saukhyadatara Jiva. Caranarajatali
Dyava dasa visava, bhakta visava
Aarti…
Jaluniya ananga. Sasvarupi rahe danga Mumuksa janan davi.
Nija dola Sriranga. Dola Sriranga
Aarti…
Jaya mani jaisa bhava. Tayataisa anubhava Davisi dayaghana,
Aisi tuzi he mava, tuzi he mava.
Aarti…
Tumace nama dhyata. Hare Sansruthivyatha
Agadha Tava karani. Marga davisi anatha, davisi anatha.
Aarti…
Kaliyuga Avatara, Saguna Brahma sachara
Avatirna zalase Svami Datta Digambara, Datta Digambara.
Aarti…
Athan Divasa Gurvari.Bhakta kariti vari.
Prabhupada Pahavaya Bhava Bhayanivari, bhayanivari.
Aarti…
Maza nijadravya theva, Thava carana-raja-seva
Magane heci aata, Tumhan devadideva, devadideva.
Aarti…
Ichita Dina chatak Nirmala toya nijasukha
Pajaven Madhava Ya Sambhala apuli bhaka, apuli bhaka.
Aarti…</string>
    <string name="dhooplayout2">
        Siradi Maze Pandharapura. Sai Baba Ramavare.
Baba Ramavara. Sai Ramavara.
Sudha bhakti chandrabhaga, Bhava Pundalika jaga.
Pundalika jaga, Bhava Pundalika jaga.
Yaho yaho avaghe jana, Kara Babansi vandana
Babansi vandana, Saisi vandana.
Ganu mhane Baba Sai. Dhava pava mazi ai.
Pava maze ai. Dhava pava mazi ai.

    </string>
     <string name="dhooplayout3">
         Ghalina lotangana vandina carana, Dolyanni pahina rupa tuze
Preme aligina, anande pujina, Bhave ovalina mhane Nama.
Tvameva mata ca pita tvameva, Tvameva bandhusca sakha tvameva
Tvameva vidya dravinam tvameva, Tvameva sarvam mama, Deva Deva.
Kayane Vaca manasendriyairva. Budhyatmanava prakriti svabhavat
Karomi yadyatsakalam parasmai. Narayanayeti samarpayami.
Acchutam keshavam ramanarayanam
Krishnadamodaram vasudevam harim
Sridharam Madhavam Gopikavallabham,
Janakinayakam Ramacandran bhaje.
    </string>
     <string name="dhooplayout4">
Hare Rama, Hare Rama, Rama Rama Hare Hare
Hare Krishna, Hare Krishna, Krishna Krishna Hare Hare
(3 times)
    </string>
    <string name="om_sri_sai">OM SRI SAI</string>
    <string name="address">
1835 Polk St NE\n
Minneapolis MN 55418</string>
    <string name="phone"><a href="6127897729">6127897729</a></string>
    <string name="email">sai@saibabamn.org</string>
    <string name="hours">
        <b>Week Days</b>\n
9:00AM - 12:30PM\n
6:30PM - 8:30PM\n
\n
<b>Saturdays</b>\n
9:00AM - 8:30PM\n
\n
<b>Sundays</b>\n
9:00AM - 1:00PM\n
6:30PM - 8:30PM</string>
    <string name="title"><b>Welcome to Sri Saibaba Mandir MN</b></string>
    <string name="directions"><a href="https://www.google.com/maps/dir/44.8067504,-93.1863564/Shirdi+Saibaba+Prayer+Center,+1835+Polk+St+NE,+Minneapolis,+MN+55418/@44.9057076,-93.3429675,11z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x52b32d9599e8e403:0xa130f076d9166416!2m2!1d-93.2452659!2d45.0070941">Get Directions</a></string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="schedule">
9:15 AM Kakad Arati\n
9:45 AM Mangalsnan/ Abhishek\n
11:30 AM Shodosopachara Pooja\n
12:00 Madhyana Arati\n
\n
6:30 PM Dhoop Arati\n
8:30 PM Shej Arati\n
\n
<b>Darshan closes at 8:20 PM</b>\n
\n
<b>Thursdays</b>\n
7:15 PM Sri Sai Paduka Pooja\n
7:45 PM Ceremonial Procession of Sri Saibaba\'s Padukas to Chavadi\n
\n
<b>Saturdays</b>\n
11:45 AM Sri Saibaba Bhajan with devotees participation\n
3:00 PM Sri Saibaba Satsang\n
\n
<b>Sundays</b>\n
10:45 AM Sri Saibaba Abhishek in Chavadi with devotees participation\n
11:00 AM Sri Saibaba Namasmarana/ Satcharita Parayana
</string>
    <string name="ok">OK</string>
    <string name="titledialog">Daily Schedule</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="telugu">Telugu</string>
</resources>