<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/om"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/om_sri_sai" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/om"
        android:layout_marginTop="10dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/addresslink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginTop="5dp"
        android:linksClickable="true"
        android:text="@string/directions" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addresslink"
        android:layout_marginTop="10dp"
        android:autoLink="phone"
        android:text="@string/phone"
        android:layout_alignEnd="@+id/email"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginBottom="10dp"
        android:autoLink="email"
        android:text="@string/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:id="@+id/hours"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/daily_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/schedule"
        android:layout_marginTop="5dp"
        android:layout_below="@id/hours"
        />
</RelativeLayout>
