<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="25dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/picklanguage" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:text="Kakad Aarthi"
            android:textColor="#FFA500"
            android:textSize="30sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout3"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout4"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout5"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout6"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout7"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout8"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout9"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout10"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout11"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout12"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFA500" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakadlayout13"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>